@@ -38,8 +38,7 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     version2 = versionRepository.save(version2);
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version2Builder().build();
-    editedVersion.setDescription("FPFN Description <changed>");
-    editedVersion.setComment("Scenario 2");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description <changed>");
     editedVersion.setStatus(Status.VALIDATED);
     editedVersion.setValidFrom(LocalDate.of(2022, 6, 1));
     editedVersion.setValidTo(LocalDate.of(2023, 6, 1));
@@ -54,13 +53,12 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     //then
     assertThat(result).hasSize(5);
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
-    assertThat(result.get(0)).isNotNull();
+    assertThat(result.getFirst()).isNotNull();
 
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX1");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -71,8 +69,7 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2022, 5, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -83,8 +80,7 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 6, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 6, 1));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("FPFN Description <changed>");
-    assertThat(thirdTemporalVersion.getComment()).isEqualTo("Scenario 2");
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description <changed>");
     Set<TimetableFieldLineRelation> lineRelations = thirdTemporalVersion.getLineRelations();
     assertThat(lineRelations).hasSize(1);
     TimetableFieldLineRelation lineRelation = lineRelations.stream().iterator().next();
@@ -99,8 +95,7 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fourthTemporalVersion = result.get(3);
     assertThat(fourthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2023, 6, 2));
     assertThat(fourthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
-    assertThat(fourthTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(fourthTemporalVersion.getComment()).isNull();
+    assertThat(fourthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(fourthTemporalVersion.getLineRelations()).isEmpty();
     assertThat(fourthTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(fourthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -111,14 +106,12 @@ class TimetableFieldNumberServiceScenario2Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fifthTemporalVersion = result.get(4);
     assertThat(fifthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2024, 1, 1));
     assertThat(fifthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(fifthTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(fifthTemporalVersion.getComment()).isNull();
+    assertThat(fifthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(fifthTemporalVersion.getLineRelations()).isEmpty();
     assertThat(fifthTemporalVersion.getNumber()).isEqualTo("BEX3");
     assertThat(fifthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(fifthTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
     assertThat(fifthTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
-
   }
 
 }
