@@ -41,33 +41,29 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     version2 = versionRepository.save(version2);
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version3Builder().build();
-    editedVersion.setDescription("FPFN Description <changed>");
-    editedVersion.setComment("Scenario 7a");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description <changed>");
     editedVersion.setValidFrom(LocalDate.of(2025, 1, 1));
     editedVersion.setValidTo(LocalDate.of(2025, 12, 31));
-    editedVersion.getLineRelations()
-        .add(TimetableFieldLineRelation.builder()
-            .slnid("ch:1:ttfnid:111111")
-            .timetableFieldNumberVersion(version3)
-            .build());
+    editedVersion.getLineRelations().add(TimetableFieldLineRelation.builder()
+        .slnid("ch:1:ttfnid:111111")
+        .timetableFieldNumberVersion(version3)
+        .build());
     editedVersion.setVersion(version3.getVersion());
 
     //when
     timetableFieldNumberService.updateVersion(version3, editedVersion);
-    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(
-        version1.getTtfnid());
+    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(version1.getTtfnid());
 
     //then
     assertThat(result).hasSize(4);
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // first version no changes
-    assertThat(result.get(0)).isNotNull();
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    assertThat(result.getFirst()).isNotNull();
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX1");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -78,8 +74,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -90,8 +85,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2024, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(thirdTemporalVersion.getComment()).isNull();
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     Set<TimetableFieldLineRelation> lineRelationsThirdVersion = thirdTemporalVersion.getLineRelations();
     assertThat(lineRelationsThirdVersion).isEmpty();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX3");
@@ -103,20 +97,16 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fourthTemporalVersion = result.get(3);
     assertThat(fourthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2025, 1, 1));
     assertThat(fourthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
-    assertThat(fourthTemporalVersion.getDescription()).isEqualTo("FPFN Description <changed>");
-    assertThat(fourthTemporalVersion.getComment()).isEqualTo("Scenario 7a");
+    assertThat(fourthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description <changed>");
     Set<TimetableFieldLineRelation> lineRelationsFourthVersion = fourthTemporalVersion.getLineRelations();
     assertThat(lineRelationsFourthVersion).hasSize(1);
-    TimetableFieldLineRelation lineRelationFourthVersion = lineRelationsFourthVersion.stream()
-        .iterator()
-        .next();
+    TimetableFieldLineRelation lineRelationFourthVersion = lineRelationsFourthVersion.stream().iterator().next();
     assertThat(lineRelationFourthVersion).isNotNull();
     assertThat(lineRelationFourthVersion.getSlnid()).isEqualTo("ch:1:ttfnid:111111");
     assertThat(fourthTemporalVersion.getNumber()).isEqualTo("BEX3");
     assertThat(fourthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(fourthTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
     assertThat(fourthTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
-
   }
 
   /**
@@ -136,37 +126,31 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     version2 = versionRepository.save(version2);
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version1Builder().build();
-    editedVersion.setDescription("FPFN Description <changed>");
-    editedVersion.setComment("Scenario 7b");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description <changed>");
     editedVersion.setValidFrom(LocalDate.of(2019, 1, 1));
     editedVersion.setValidTo(LocalDate.of(2019, 12, 31));
-    editedVersion.getLineRelations()
-        .add(TimetableFieldLineRelation.builder()
-            .slnid("ch:1:ttfnid:111111")
-            .timetableFieldNumberVersion(version1)
-            .build());
+    editedVersion.getLineRelations().add(TimetableFieldLineRelation.builder()
+        .slnid("ch:1:ttfnid:111111")
+        .timetableFieldNumberVersion(version1)
+        .build());
     editedVersion.setVersion(version1.getVersion());
 
     //when
     timetableFieldNumberService.updateVersion(version1, editedVersion);
-    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(
-        version1.getTtfnid());
+    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(version1.getTtfnid());
 
     //then
     assertThat(result).hasSize(4);
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     //first new
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2019, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2019, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("FPFN Description <changed>");
-    assertThat(firstTemporalVersion.getComment()).isEqualTo("Scenario 7b");
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description <changed>");
     Set<TimetableFieldLineRelation> lineRelationsFirstVersion = firstTemporalVersion.getLineRelations();
     assertThat(lineRelationsFirstVersion).hasSize(1);
-    TimetableFieldLineRelation lineRelationFirstVersion = lineRelationsFirstVersion.stream()
-        .iterator()
-        .next();
+    TimetableFieldLineRelation lineRelationFirstVersion = lineRelationsFirstVersion.stream().iterator().next();
     assertThat(lineRelationFirstVersion).isNotNull();
     assertThat(lineRelationFirstVersion.getSlnid()).isEqualTo("ch:1:ttfnid:111111");
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX1");
@@ -178,8 +162,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX1");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -190,8 +173,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(thirdTemporalVersion.getComment()).isNull();
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(thirdTemporalVersion.getLineRelations()).isEmpty();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(thirdTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -202,15 +184,13 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fourthTemporalVersion = result.get(3);
     assertThat(fourthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2024, 1, 1));
     assertThat(fourthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(fourthTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(fourthTemporalVersion.getComment()).isNull();
+    assertThat(fourthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     Set<TimetableFieldLineRelation> lineRelationsFourthVersion = fourthTemporalVersion.getLineRelations();
     assertThat(lineRelationsFourthVersion).isEmpty();
     assertThat(fourthTemporalVersion.getNumber()).isEqualTo("BEX3");
     assertThat(fourthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(fourthTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
     assertThat(fourthTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
-
   }
 
   /**
@@ -230,33 +210,29 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     version2 = versionRepository.save(version2);
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version3Builder().build();
-    editedVersion.setDescription("FPFN Description <changed>");
-    editedVersion.setComment("Scenario 7c");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description <changed>");
     editedVersion.setValidFrom(LocalDate.of(2025, 6, 1));
     editedVersion.setValidTo(LocalDate.of(2025, 12, 31));
-    editedVersion.getLineRelations()
-        .add(TimetableFieldLineRelation.builder()
-            .slnid("ch:1:ttfnid:111111")
-            .timetableFieldNumberVersion(version3)
-            .build());
+    editedVersion.getLineRelations().add(TimetableFieldLineRelation.builder()
+        .slnid("ch:1:ttfnid:111111")
+        .timetableFieldNumberVersion(version3)
+        .build());
     editedVersion.setVersion(version3.getVersion());
 
     //when
     timetableFieldNumberService.updateVersion(version3, editedVersion);
-    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(
-        version1.getTtfnid());
+    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(version1.getTtfnid());
 
     //then
     assertThat(result).hasSize(4);
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // first version no changes
-    assertThat(result.get(0)).isNotNull();
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    assertThat(result.getFirst()).isNotNull();
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX1");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -267,8 +243,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -279,8 +254,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2024, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(thirdTemporalVersion.getComment()).isNull();
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     Set<TimetableFieldLineRelation> lineRelationsThirdVersion = thirdTemporalVersion.getLineRelations();
     assertThat(lineRelationsThirdVersion).isEmpty();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX3");
@@ -292,20 +266,16 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fourthTemporalVersion = result.get(3);
     assertThat(fourthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2025, 6, 1));
     assertThat(fourthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
-    assertThat(fourthTemporalVersion.getDescription()).isEqualTo("FPFN Description <changed>");
-    assertThat(fourthTemporalVersion.getComment()).isEqualTo("Scenario 7c");
+    assertThat(fourthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description <changed>");
     Set<TimetableFieldLineRelation> lineRelationsFourthVersion = fourthTemporalVersion.getLineRelations();
     assertThat(lineRelationsFourthVersion).hasSize(1);
-    TimetableFieldLineRelation lineRelationFourthVersion = lineRelationsFourthVersion.stream()
-        .iterator()
-        .next();
+    TimetableFieldLineRelation lineRelationFourthVersion = lineRelationsFourthVersion.stream().iterator().next();
     assertThat(lineRelationFourthVersion).isNotNull();
     assertThat(lineRelationFourthVersion.getSlnid()).isEqualTo("ch:1:ttfnid:111111");
     assertThat(fourthTemporalVersion.getNumber()).isEqualTo("BEX3");
     assertThat(fourthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(fourthTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
     assertThat(fourthTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
-
   }
 
   /**
@@ -325,37 +295,31 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     version2 = versionRepository.save(version2);
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version1Builder().build();
-    editedVersion.setDescription("FPFN Description <changed>");
-    editedVersion.setComment("Scenario 7d");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description <changed>");
     editedVersion.setValidFrom(LocalDate.of(2019, 1, 1));
     editedVersion.setValidTo(LocalDate.of(2019, 5, 31));
-    editedVersion.getLineRelations()
-        .add(TimetableFieldLineRelation.builder()
-            .slnid("ch:1:ttfnid:111111")
-            .timetableFieldNumberVersion(version1)
-            .build());
+    editedVersion.getLineRelations().add(TimetableFieldLineRelation.builder()
+        .slnid("ch:1:ttfnid:111111")
+        .timetableFieldNumberVersion(version1)
+        .build());
     editedVersion.setVersion(version1.getVersion());
 
     //when
     timetableFieldNumberService.updateVersion(version1, editedVersion);
-    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(
-        version1.getTtfnid());
+    List<TimetableFieldNumberVersion> result = versionRepository.getAllVersionsVersioned(version1.getTtfnid());
 
     //then
     assertThat(result).hasSize(4);
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     //first new
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2019, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2019, 5, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("FPFN Description <changed>");
-    assertThat(firstTemporalVersion.getComment()).isEqualTo("Scenario 7d");
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description <changed>");
     Set<TimetableFieldLineRelation> lineRelationsFirstVersion = firstTemporalVersion.getLineRelations();
     assertThat(lineRelationsFirstVersion).hasSize(1);
-    TimetableFieldLineRelation lineRelationFirstVersion = lineRelationsFirstVersion.stream()
-        .iterator()
-        .next();
+    TimetableFieldLineRelation lineRelationFirstVersion = lineRelationsFirstVersion.stream().iterator().next();
     assertThat(lineRelationFirstVersion).isNotNull();
     assertThat(lineRelationFirstVersion.getSlnid()).isEqualTo("ch:1:ttfnid:111111");
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX1");
@@ -367,8 +331,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX1");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -379,8 +342,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(thirdTemporalVersion.getComment()).isNull();
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     assertThat(thirdTemporalVersion.getLineRelations()).isEmpty();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX2");
     assertThat(thirdTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -391,15 +353,13 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     TimetableFieldNumberVersion fourthTemporalVersion = result.get(3);
     assertThat(fourthTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2024, 1, 1));
     assertThat(fourthTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(fourthTemporalVersion.getDescription()).isEqualTo("FPFN Description");
-    assertThat(fourthTemporalVersion.getComment()).isNull();
+    assertThat(fourthTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("FPFN Description");
     Set<TimetableFieldLineRelation> lineRelationsFourthVersion = fourthTemporalVersion.getLineRelations();
     assertThat(lineRelationsFourthVersion).isEmpty();
     assertThat(fourthTemporalVersion.getNumber()).isEqualTo("BEX3");
     assertThat(fourthTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(fourthTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
     assertThat(fourthTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
-
   }
 
   /**
@@ -412,15 +372,13 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
     version1.setValidTo(LocalDate.of(2029, 12, 8));
     version1 = versionRepository.save(version1);
     TimetableFieldNumberVersion editedVersion = version1Builder().build();
-    editedVersion.setDescription("FPFN Description Frederic");
-    editedVersion.setComment("Frederic");
+    editedVersion.setDescriptionOutwardLine1("FPFN Description Frederic");
     editedVersion.setValidFrom(LocalDate.of(2029, 12, 9));
     editedVersion.setValidTo(version1.getValidTo());
-    editedVersion.getLineRelations()
-        .add(TimetableFieldLineRelation.builder()
-            .slnid("ch:1:ttfnid:111111")
-            .timetableFieldNumberVersion(version1)
-            .build());
+    editedVersion.getLineRelations().add(TimetableFieldLineRelation.builder()
+        .slnid("ch:1:ttfnid:111111")
+        .timetableFieldNumberVersion(version1)
+        .build());
     editedVersion.setVersion(version1.getVersion());
 
     //when
@@ -428,8 +386,7 @@ class TimetableFieldNumberServiceScenario7Test extends BaseTimetableFieldNumberS
       timetableFieldNumberService.updateVersion(version1, editedVersion);
       //then
     }).isInstanceOf(DateOrderException.class)
-        .hasMessageContaining(
-            "Edited ValidFrom is bigger than edited ValidTo")
+        .hasMessageContaining("Edited ValidFrom is bigger than edited ValidTo")
         .extracting("validFrom", "validTo")
         .containsExactly(LocalDate.of(2029, 12, 9), LocalDate.of(2029, 12, 8));
   }
